<resources>
    <string name="app_name">Quzy</string>
    <string name="add_child">Add Child</string>
    <string name="results">Results</string>
    <string name="new_tests">New Tests</string>
    <string name="enter_child_name">Enter Child Name</string>
    <string name="enter_parent_name">Enter Parent\'s Name</string>
    <string name="add">Add</string>
    <string name="your_score">Your Score</string>
    <string name="congratulations">Congratulations</string>
    <string name="add_test">Add Test</string>
    <string name="test_name">Test Name</string>
    <string name="answer">Answer</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="add_question">Add Questions</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="question">Question</string>
    <string name="of">of</string>
    <string name="mark">Mark</string>
    <string name="number_of_questions_added">Number of Questions Added : </string>
    <string name="test_completed">Test Completed</string>
    <string name="test_pending">Test Pending</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="privacy">Privacy Policy</string>
    <string name="submit">Submit</string>
    <string name="search_here">Search Here</string>
    <string name="result">Result</string>
    <string name="edit">Edit</string>
    <string name="parent_name">Parent Name :</string>
    <string name="mark_results">Mark :</string>
    <string name="answering_time">Answering Time</string>
    <string name="select_category">Select Category</string>
    <string name="children">Children</string>
    <string name="category1">Category :</string>
    <string name="edit_child">Edit Child Details</string>
    <string name="update">Update</string>
    <string name="show">Show</string>
    <string name="question_number">"Question Number : "</string>
    <string name="total_mark">"Total Mark : "</string>

    <string-array name="category">
        <item>Kids</item>
        <item>Junior</item>
        <item>Senior</item>
    </string-array>
</resources>