<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="135dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/admin_children_layout_edit"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:layout_marginRight="30dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/edit_children_icon"
                android:src="@drawable/ic_baseline_edit_24"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_below="@id/edit_children_icon"
                android:textColor="@color/white"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/admin_children_layout_child_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/text_color"
                android:textSize="18dp"
                android:textStyle="bold"
                tools:text="Name" />

            <RelativeLayout
                android:id="@+id/admin_children_row_2"
                android:layout_width="match_parent"
                android:layout_below="@id/admin_children_layout_child_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/admin_children_layout_parent_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/text_color"
                    android:textSize="15dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:text="@string/parent_name" />

                <TextView
                    android:id="@+id/admin_children_layout_parent_name"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/admin_children_layout_parent_name_text"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/text_color"
                    android:fontFamily="sans-serif"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    tools:text="name" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/admin_children_row_3"
                android:layout_width="match_parent"
                android:layout_below="@id/admin_children_row_2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/admin_children_layout_category_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/text_color"
                    android:textSize="15dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:text="@string/category1" />

                <TextView
                    android:id="@+id/admin_children_layout_category_name"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/admin_children_layout_category_text"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/text_color"
                    android:fontFamily="sans-serif"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    tools:text="name" />
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>